<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/offsetLarge">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="32sp"
                android:lineHeight="40sp"
                android:text="@string/intro_title"/>

            <com.tonkeeper.uikit.widget.IntroBlockView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetLarge"
                android:icon="@drawable/ic_rocket_28"
                android:title="@string/intro_line_1_title"
                android:description="@string/intro_line_1_description"/>

            <com.tonkeeper.uikit.widget.IntroBlockView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetLarge"
                android:icon="@drawable/ic_shield_28"
                android:title="@string/intro_line_2_title"
                android:description="@string/intro_line_2_description"/>

            <com.tonkeeper.uikit.widget.IntroBlockView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetLarge"
                android:icon="@drawable/ic_ticket_28"
                android:title="@string/intro_line_3_title"
                android:description="@string/intro_line_3_description"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <Button
        style="@style/Widget.App.Button"
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offsetLarge"
        android:textAppearance="@style/TextAppearance.Label1"
        android:text="@string/get_started"/>

</androidx.appcompat.widget.LinearLayoutCompat>