<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <uikit.widget.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/collectibles"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/offsetMedium"/>

        <uikit.widget.EmptyLayout
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:title="@string/empty_collectibles_title"
            android:description="@string/empty_collectibles_subtitle"
            android:positiveButtonText="@string/open_market"
            android:negativeButtonText="@string/receive"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/shimmer_collectibles"/>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </FrameLayout>


</androidx.appcompat.widget.LinearLayoutCompat>