<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <uikit.widget.ButtonsLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <uikit.widget.IconButtonView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_arrow_up_28"
            android:title="@string/send"/>

        <uikit.widget.IconButtonView
            android:id="@+id/receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_arrow_down_28"
            android:title="@string/receive"/>

        <uikit.widget.IconButtonView
            android:id="@+id/buy_or_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_usd_28"
            android:title="@string/buy_or_sell"/>

    </uikit.widget.ButtonsLayout>

</FrameLayout>