<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <uikit.widget.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/country_title"
        android:action="@drawable/ic_close_16"/>

    <uikit.widget.SearchInput
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offsetMedium"
        android:button="@string/cancel"
        android:hint="@string/search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingHorizontal="@dimen/offsetMedium"
        android:paddingBottom="@dimen/offsetMedium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</androidx.appcompat.widget.LinearLayoutCompat>