<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offsetLarge"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/write"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetMedium"
            android:gravity="center"
            android:textColor="@color/textPrimary"
            android:textAppearance="@style/TextAppearance.H2"
            android:text="@string/wallet_attention_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetMedium"
            android:gravity="center"
            android:textColor="@color/textSecondary"
            android:textAppearance="@style/TextAppearance.Body1"
            android:text="@string/wallet_attention_description"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/offsetLarge"
        android:layout_marginHorizontal="@dimen/offsetLarge"
        android:textAppearance="@style/TextAppearance.Label1"
        android:text="@string/continue_action"/>

</FrameLayout>