<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/offsetLarge"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/import_wallet_title"
                android:textColor="@color/textPrimary"
                android:textAppearance="@style/TextAppearance.H2"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetExtraExtraSmall"
                android:gravity="center"
                android:text="@string/import_wallet_description"
                android:textColor="@color/textSecondary"
                android:textAppearance="@style/TextAppearance.Body1"/>

            <com.tonkeeper.uikit.widget.WordForm
                android:id="@+id/word_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/offsetLarge"/>

            <Button
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_action"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.tonkeeper.uikit.widget.WordHintView
        android:id="@+id/word_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

</FrameLayout>