<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/offsetMedium"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/offsetLarge"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phrase_title"
                android:gravity="center"
                android:textColor="@color/textPrimary"
                android:textAppearance="@style/TextAppearance.H2"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetExtraSmall"
                android:text="@string/phrase_description"
                android:gravity="center"
                android:textColor="@color/textSecondary"
                android:textAppearance="@style/TextAppearance.Body1"/>

            <uikit.widget.PhraseWords
                android:id="@+id/words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetMedium"
                android:layout_marginHorizontal="@dimen/offsetMedium"
                android:orientation="horizontal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <Button
        android:id="@+id/next"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offsetLarge"
        android:textAppearance="@style/TextAppearance.Label1"
        android:text="@string/continue_action"/>

</androidx.appcompat.widget.LinearLayoutCompat>